Fix svelte and vanilla JS demos

--- a/apps/vanillajs/index.html
+++ b/apps/vanillajs/index.html
@@ -11,7 +11,7 @@
 <body class="h-full">
   <div class="absolute inset-0 bg-slate-200/70 pdfSlick">
     <div class="flex-1 relative h-full" id="container">
-      <div id="viewerContainer" class="pdfSlickContainer absolute inset-0">
+      <div id="viewerContainer" class="pdfSlickContainer absolute inset-0 overflow-auto">
         <div id="viewer" class="pdfSlickViewer pdfViewer"></div>
       </div>
     </div>
