--- a/apps/solidweb/index.html
+++ b/apps/solidweb/index.html
@@ -16,14 +16,14 @@
   <div id="printContainer"></div>
   <dialog id="printServiceDialog" class="min-w-[200px]">
     <div class="row">
-      <span data-l10n-id="print_progress_message">Preparing document for printing…</span>
+      <span data-l10n-id="pdfjs-print-progress-message">Preparing document for printing…</span>
     </div>
     <div class="row">
       <progress value="0" max="100"></progress>
-      <span data-l10n-id="print_progress_percent" data-l10n-args='{ "progress": 0 }' class="relative-progress">0%</span>
+      <span data-l10n-id="pdfjs-print-progress-percent" data-l10n-args='{ "progress": 0 }' class="relative-progress">0%</span>
     </div>
     <div class="buttonRow">
-      <button id="printCancel" class="dialogButton"><span data-l10n-id="print_progress_close">Cancel</span></button>
+      <button id="printCancel" class="dialogButton" type="button"><span data-l10n-id="pdfjs-print-progress-close-button">Cancel</span></button>
     </div>
   </dialog>
 
