--- a/apps/svelteweb/src/app.html
+++ b/apps/svelteweb/src/app.html
@@ -8,6 +8,6 @@
 	</head>
 
 	<body data-sveltekit-preload-data="hover" class="h-full">
-		<div style="display: contents">%sveltekit.body%</div>
+		%sveltekit.body%
 	</body>
 </html>
