--- a/apps/svelteweb/src/app.html
+++ b/apps/svelteweb/src/app.html
@@ -2,8 +2,9 @@
 <html lang="en" class="h-full">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/symbol.svg" type="image/svg+xml">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>PDFSlick Svelte Demo</title>
 		%sveltekit.head%
 	</head>
 
